# vector-search

./: .gitignore  README.ko.md  README.md  docker-compose.yml  pyproject.toml
docs/: Insert Strategy.md
src/embedder/: __init__.py  options.py  qpoint_builder.py  qpoint_builder_single.py  qtypes.py  runners.py
src/embedder/models/: base.py  st_model.py
src/embedder/qdrant_helper/: qclient_search.py
src/imgtool/: ImageWD.py
src/vector_search/: insert_vector_expand.py  insert_vector_single.py
ui/: streamlit_app.py
